Add configuration storage into the DB
